@@ -4,7 +4,8 @@ Changelog
 1.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Issue #13: Pyroma would fail when checking a package name if no source
+  distribution could be found.
 
 
 1.3.1 (2013-05-29)
